-e CI=true added

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t f1oop/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run f1oop/docker-react npm run test -- --coverage
+  - docker run -e CI=true f1oop/docker-react npm run test -- --coverage
