--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,16 @@ before_install:
 
 script:
   - docker run -e CI=true f1oop/docker-react npm run test -- --coverage
+
+ deploy:
+  provider: elasticbeanstalk
+  region:  "us-west-2"
+  app: "Docker"
+  env: "Docker-env"
+  bucket_name: "elasticbeanstalk-us-west-2-598444950095"
+  bucket_path: "Docker"
+  on:
+    branch: master
+  acces_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
