--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,5 @@ deploy:
   on:
     branch: master
   acces_key_id: $AWS_ACCESS_KEY
-  secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+  secure_key_id: "$AWS_SECRET_KEY"
   skip_cleanup: true
