--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,10 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "us-west-2"
-  app: "Docker"
+  app: "docker"
   env: "Docker-env"
   bucket_name: "elasticbeanstalk-us-west-2-598444950095"
-  bucket_path: "Docker"
-  on:
-    branch: master
-  acces_key_id: $AWS_ACCESS_KEY
-  secret_access_key: "$AWS_SECRET_KEY"
-  skip_cleanup: true
+  acces_key_id: 
+    secure: "$AWS_ACCESS_KEY"
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
